[package]
name = "libdecor-headers"
version = "0.1.0+0.2.2"
edition = "2024"
rust-version = "1.85.0"
description = "Minimalist Rust FFI bindings for libdecor"
repository = "https://github.com/jbatez/libdecor-headers-rs"
license = "MIT-0"
keywords = [
    "wayland",
    "libdecor",
    "headers",
    "bindings",
]
categories = [
    "api-bindings",
    "gui",
]

[dependencies]
wayland-headers = "0.1.0"
